# chanta-perma-memory

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: config.json
docs/: CHANGELOG.md  local-llm-test-results-v0.5.1.md  persona-governance-v0.1.md  repository-spec-v0.1.md
policies/: README.md  domain_rules.json  tag_rules.json
schemas/: inbox_manifest.schema.json  memory_candidate.schema.json
scripts/: build_perma_v1_snapshot.py  download_gpt_oss.py  download_nemotron.py  generate_memory_candidates.py  generate_review_report.py  refine_memory_candidates_with_ollama.py  run_perma_v1.py  scan_inbox.py  test_gpt_oss_transformers.py  test_nemotron_transformers.py
scripts/output/: inbox_manifest.json  memory_candidates.json  memory_candidates_refined.json  perma_v1_snapshot.json
src/chanta_perma_memory/: __init__.py  cli.py
src/chanta_perma_memory/config/: __init__.py  settings.py
src/chanta_perma_memory/policies/: __init__.py  ingest.py
src/chanta_perma_memory/schemas/: __init__.py  memory.py
tests/: test_cli.py  test_config.py  test_ingest_policy.py
